# ml-deploy-example-az

./: Dockerfile  Readme.md  iris_model.pkl  pyproject.toml  serve_model.py
