[tool.poetry]
name = "ml-deploy-example"
version = "0.1.0"
description = "example azure deploy"
authors = [
    "Leonel481 <leonel.aliaga.v@gmail.com>"
]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
scikit-learn = ">=1.7.1,<2.0.0"
joblib = "^1.5.1"
flask = "^3.1.1"
numpy = "^2.3.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
